added posts condition

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,9 @@ layout: default
     </time>
   </header>
 
-  {% if page.collection == "red" %}
+  {% if page.collection == "posts" %}
+    <!-- do nothing -->
+  {% else if page.collection == "red" %}
 
     <h1 style="background: red; color: white; padding: 10px; display: inline-block;">Red Page</h1>
     <div class="post-content">
